--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Lynx</title>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />    
-    <link rel="stylesheet" href="main.css">
-    <script src="https://use.fontawesome.com/6cdc5077a4.js"></script>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    
+    <!--<link rel="stylesheet" href="main.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="app"></div>    
