--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 
     <title>Lynx</title>
     
-    <!--<link rel="stylesheet" href="main.css">-->
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
