--- a/client/landing/index.html
+++ b/client/landing/index.html
@@ -21,7 +21,7 @@
             </a>
           </div>
 
-
+          <!--
           <div class="nav-center">
             <a class="nav-item">
               <span class="icon">
@@ -33,7 +33,7 @@
                 <i class="fa fa-twitter"></i>
               </span>
             </a>
-          </div>
+          </div>-->
 
           <!-- This "nav-toggle" hamburger menu is only visible on mobile -->
           <!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
@@ -99,7 +99,7 @@
                       <h1 class="title title-large">
                           Why Lynx?
                       </h1>
-                        
+                      <br>
                       <hr>
                       <br>
                       
