fixed sizing / spacing

--- a/client/landing/index.html
+++ b/client/landing/index.html
@@ -133,9 +133,9 @@
                       <div class="column">
                       </div>
                       <div class="column is-two-thirds">
-                        <h1 class="title">The Solution</h1>
-                       
-                        <p class="">The Lynx web-app automatically archives links that users send over popular messaging services. Lynx recognizes that links shared over messaging holds value to the user and should not be lost in their message history</p>
+                        <h1 class="title title-large">The Solution</h1>
+                        <br>
+                        <p class="subtitle">The Lynx web-app automatically archives links that users send over popular messaging services. Lynx recognizes that links shared over messaging holds value to the user and should not be lost in their message history</p>
                       </div>
                       <div class="column">
                       </div>
