hooked up landing and routing is working

--- a/client/index.html
+++ b/client/index.html
@@ -21,19 +21,6 @@
             </a>
           </div>
 
-          <!--
-          <div class="nav-center">
-            <a class="nav-item">
-              <span class="icon">
-                <i class="fa fa-github"></i>
-              </span>
-            </a>
-            <a class="nav-item">
-              <span class="icon">
-                <i class="fa fa-twitter"></i>
-              </span>
-            </a>
-          </div>-->
 
           <!-- This "nav-toggle" hamburger menu is only visible on mobile -->
           <!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
@@ -50,7 +37,7 @@
             <div class="nav-item">
               <div class="field is-grouped">
                 <p class="control">
-                  <a class="button" >
+                  <a class="button" href="http://localhost:1234/app/#/login">
                     <span class="icon">
                       <i class="fa fa-user" aria-hidden="true"></i>
                     </span>
@@ -58,7 +45,7 @@
                   </a>
                 </p>
                 <p class="control">
-                  <a class="button is-primary">
+                  <a class="button is-primary" href="http://localhost:1234/app/#/signup">
                     <span class="icon">
                       <i class="fa fa-sign-in" aria-hidden="true"></i>
                     </span>
@@ -258,10 +245,8 @@
         </div>
     </div> 
     <div class="arrow animated bounce">
-  <img width="40" height="40" alt="" src="img/arrow.png" />
-</div> 
+      <img width="40" height="40" alt="" src="img/arrow.png" />
+    </div> 
 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.slim.js"></script>
-    <script src="dist/bundle.js"></script>-->
 </body>
 </html>
