made 'get started' go to signup page

--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
                           What you share matters
                       </h1>
                       <div class="container">
-                          <a class="button is-primary is-inverted">Get Started</a>
+                          <a class="button is-primary is-inverted" href="https://lynxapp.me/app/#/signup">Get Started</a>
                           <a class="button is-primary is-inverted" href="#about">About</a>
                       </div>
 
