fixed the resizing bug on the landing page

--- a/client/index.html
+++ b/client/index.html
@@ -143,13 +143,13 @@
                       <h1 class="title title-large">Integrate</h1>
                       <h2 class="subtitle">With popular messaging platforms</h2>
                     </div>
-                    <div class="column is-one-sixth">
+                    <div class="integrate-column column is-one-sixth">
                       <img class="integration" src="img/facebook.png" />
                     </div>
-                    <div class="column is-one-sixth">
+                    <div class=" integrate-column column is-one-sixth">
                       <img class="integration" src="img/slack.png" />
                     </div>
-                    <div class="column is-one-sixth">
+                    <div class=" integrate-column column is-one-sixth">
                       <img class="integration" src="img/gmail.png" />
                     </div>
                     <div class="column is-one-sixth">
