changed github link

--- a/client/index.html
+++ b/client/index.html
@@ -235,7 +235,7 @@
                   <strong>Lynx</strong> by Ena Markovic, Kimiko Farmer, Wei-jen Chiang, and Austin Weale. UW iSchool Capstone 2017.
                 </p>
                 <p>
-                  <a class="icon" href="https://github.com/jgthms/bulma">
+                  <a class="icon" href="https://github.com/weijen0330/lynx">
                     <i class="fa fa-github"></i>
                   </a>
                 </p>
